Initial project setup with database and tables created

--- a/AdvancedLINQApiShowcase/appsettings.json
+++ b/AdvancedLINQApiShowcase/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=ApiShowcaseDb;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ApiShowcaseDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
