Redis implementation starts.

--- a/AdvancedLINQApiShowcase/appsettings.json
+++ b/AdvancedLINQApiShowcase/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "Redis": "127.0.0.1:6379",
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ApiShowcaseDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Serilog": {
