Implemented pagination functionality for Orders and Customers, including filtering, sorting, and enhanced query logic to handle flexible search scenarios.

--- a/AdvancedLINQApiShowcase/appsettings.json
+++ b/AdvancedLINQApiShowcase/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "127.0.0.1:6379",
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ApiShowcaseDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ApiShowcaseDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
